src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>(Trade_Ally_Subscription__r.Recurring_Payment_Date__c - DATEVALUE(Trade_Ally_Subscription__r.CreatedDate)) &gt; (TODAY() -  Invoice_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_c__c</fullName>
        <formula>(Trade_Ally_Subscription__r.Recurring_Payment_Date__c - DATEVALUE(Trade_Ally_Subscription__r.CreatedDate)) &gt; (TODAY() - Invoice_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trade_Ally_Subscription__c</fullName>
        <label>Trade Ally Subscription</label>
        <referenceTo>Trade_Ally_Subscription__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>